a template is named, not pathed
Generated source spelled every template as its path, repeated at each use site,
invisible to the compiler and wrong in all of them the moment the file was
renamed. Studio now generates a Templates class in the bot's base package — one
String constant per template, regenerated on add, rename, delete, create and
open — and writes new ImageTemplate(Templates.YTUJ). A rename is one regenerated
line plus a compile error at each use site that must change.

sanitizeName folds a template name to a lowercase identifier, which is what
makes name<->constant an exact round trip so a block can read the constant back
to its file. A template named before that rule keeps its literal, and
SdkNodes.templatePathOf/templateArgument read and write both spellings in one
place, replacing three copies of the literal-only extractor.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_016uAU3E6Kiq4BZJgjHAFu7G